# quadcopter-simulation-ros-gazebo

./: .gitignore  CMakeLists.txt  README.md  manualControl.slx  package.xml  pathFollowing.slx  pathFollowingWithObstacleAvoidance.slx  run_gzb.sh  setup.sh  simpleMovement.slx  start_uav.sh
Gazebo/: license.txt  package.xml  setup.sh
Gazebo/launch/: imav_indoor.launch
Gazebo/plugins/: CMakeLists.txt
Gazebo/plugins/.kdev4/: plugins.kdev4
Gazebo/urdf/: quadrotor.urdf.xacro  quadrotor_simple_controller.urdf.xacro
Simulink/: README.md  manualControl.slx  pathFollowing.slx  pathFollowingWithObstacleAvoidance.slx
launch/: ardrone_testworld.launch  imav_indoor.launch  spawn_quadrotor.launch
meshes/quadrotor/: quadrotor_4.dae
meshes/thermaleye_camera/: thermaleye_camera_hector_v2.dae
plugins/: CMakeLists.txt  plugins.kdev4
plugins/.kdev4/: plugins.kdev4
plugins/include/: quadrotor_simple_controller.h  quadrotor_state_controller.h
plugins/src/: hello_world.cc  quadrotor_simple_controller.cpp  quadrotor_state_controller.cpp
plugins/urdf/: quadrotor_plugins.urdf.xacro  quadrotor_sensors.urdf.xacro  quadrotor_simple_controller.urdf.xacro
plugins/worlds/: hello.world
plugins_backup/: CMakeLists.txt  package.xml  plugins.kdev4
scripts/: ps2cmd_vel.py
urdf/: .quadrotor_simple_controller.urdf.xacro.kate-swp  quadrotor.urdf.xacro  quadrotor_base.urdf.xacro  quadrotor_sensors.urdf.xacro  quadrotor_simple_controller.urdf.xacro  quadrotor_with_sensors.urdf.xacro  qws.urdf  spawnrobot.sh
worlds/: ardrone_testworld.world  imav_indoor.world  imav_world.world
(+34 files in other folders)
